2004-02-13  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_new): Fix a mistake
	that always triggered the error.

2004-02-13  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_new): Implementing
	correct error handling. Totem now fails nicely if some elements are
	lacking for the GStreamer pipeline.

============ Version 0.99.9

2004-02-13  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updated
	* configure.in: version 0.99.9
	* src/totem-playlist.c:
	(totem_playlist_gtk_tree_model_iter_previous),
	(totem_playlist_gtk_tree_path_equals), (treeview_row_changed),
	(totem_playlist_has_previous_mrl), (totem_playlist_set_previous):
	Don't pollute the gtk namespace

2004-02-13  Julien MOUTTE <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_signal_idler): Add
	some safety check around tag list management.

2004-02-12  Julien MOUTTE  <julien@moutte.net>

	* src/gstvideowidget.c: (gst_video_widget_reorder_windows),
	(gst_video_widget_init): Very simple fix for a very annoying bug. So 
	now the video window should show up correctly all the time and the
	black squares that were staying over it should disappear.

2004-02-07  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
         * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-02-05  Bastien Nocera  <hadess@hadess.net>

	* data/uri.glade: add a default button for the "Open Location"
	dialog, patch from Josselin Mouette (Closes: #132138)

2004-02-05  Bastien Nocera  <hadess@hadess.net>

	* configure.in: simple fix for older autoconfs, patch by
	Harsh Jaitly <hjaitly@novell.com> (Closes: #131709)

2004-02-05  Bastien Nocera  <hadess@hadess.net>

	* src/egg-*:
	* src/totem.c: (totem_setup_recent): Revert all the egg-recent
	changes, (should Close: #131094)

2004-02-04  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_vw_exposed),