@@ -1344,6 +1344,17 @@ bacon_video_widget_unrealize (GtkWidget *widget)
 		(*GTK_WIDGET_CLASS (parent_class)->unrealize) (widget);
 }
 
+static struct poptOption xine_options[] = {
+	POPT_TABLEEND
+};
+
+struct poptOption *
+bacon_video_widget_get_popt_table (void)
+{
+	/* Xine backend does not need any options */
+	return (struct poptOption *) xine_options;
+}
+
 GtkWidget *
 bacon_video_widget_new (int width, int height, gboolean null_out, GError **err)
 {
