@@ -1,5 +1,17 @@
 2004-02-13  Julien MOUTTE  <julien@moutte.net>
 
+	* src/bacon-video-widget-gst.c: (bacon_video_widget_instance_init),
+	(bacon_video_widget_get_popt_table), (bacon_video_widget_new):
+	Implementing the popt options gathering method.
+	* src/bacon-video-widget-xine.c:
+	(bacon_video_widget_get_popt_table): Implementing the popt options 
+	gathering method.
+	* src/bacon-video-widget.h: Adding a method to get backend popt options.
+	* src/totem.c: (main): Implementing correct popt options handling 
+	through gnome_program_init. We now support backend options aswell.
+
+2004-02-13  Julien MOUTTE  <julien@moutte.net>
+
 	* src/bacon-video-widget-gst.c: (bacon_video_widget_new): Fix a mistake
 	that always triggered the error.
 
